// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary for 1 expense correctly 1`] = `
<div>
  <h4>
    Viewing 
    1
     
    expense
     
    totalling 
    $1.23
  </h4>
</div>
`;

exports[`should render ExpensesSummary for multiple expenses correctly 1`] = `
<div>
  <h4>
    Viewing 
    23
     
    expenses
     
    totalling 
    $1,233.42
  </h4>
</div>
`;
